--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.fig filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
